--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -75,6 +75,8 @@
     enlace_a("main");
 /////////////////////////////////////////////////////////////////////
     enlace_a("config");
+    enlace_a("retiro_en_proceso");
+
   //  enlace_a("info");
 //    enlace_a("cuadre_diario");
 //    enlace_a("cifras_generales");
