punto seguro antes de cambios, corrigiendo la cuenta de billetes en los egresos.

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -104,6 +104,7 @@
      mandar_orden("config");
      mandar_orden("info");
   //   mandar_orden("main");
+     enlace_a("reciclador");
      mandar_orden("cuadre_diario");
      mandar_orden("cifras_generales");
      mandar_orden("remesa_hermes");
