--- a/src/public/css/tambox.css
+++ b/src/public/css/tambox.css
@@ -59,7 +59,20 @@ li{
   background-color: rgb(20, 243, 9) ;
   grid-area: area_trabajo;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  /* grid-template-columns: 1fr 1fr; */
+  /* grid-template-rows: 1fr 1fr; */
+  grid-template-areas:
+  "resumen resumen2"
+  "panel1 panel2";
+}
+.logo{
+  display: none;
+}
+.area_trabajo_logo{
+  background-color: rgb(20, 243, 9) ;
+  grid-area: area_trabajo;
+  display: grid;
+  /* grid-template-columns: 1fr 1fr; */
   /* grid-template-rows: 1fr 1fr; */
   grid-template-areas:
   "resumen resumen2"
@@ -635,22 +648,22 @@ li{
   top: 10%;
   left: 10%;
   width: 80%;
-  height: 100%;
+  height: 80%;
   opacity: 1;
   z-index: 10;
   display: none;
   margin: 0 auto;
 }
-.overlay-back {
+#overlay-back {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
   background: #000000;
   border-radius: 15px;
-  opacity: 0.6;
-  filter: alpha(opacity=60);
+  /* opacity: 1; */
+  /* filter: alpha(opacity=60); */
   z-index: 5;
   display: none;
 }
@@ -1019,7 +1032,7 @@ li{
     color:#fff;
     text-decoration: none;
     text-align: center;
-    padding: 0.9rem 1.3rem;
+    padding: 0.2rem 1.3rem;
     /* padding-left: 15px; */
     border: 3px solid rgb(101, 120, 238);
     /* shadow: 0 1px 5px rgba(104,104,104,0.8);
@@ -1128,10 +1141,11 @@ and (min-device-width : 799px)
 and (max-device-width : 800px)
 and (-webkit-min-device-pixel-ratio: 1)  {
   .ec_btn{
-    padding: 0.4rem 1rem;
+    padding: 0.2rem 0.8rem;
   }
   body {
     /* background-color: black; */
+    margin:0;
   }
   .grupo4{
     min-height:80vh;
@@ -1148,16 +1162,38 @@ and (-webkit-min-device-pixel-ratio: 1)  {
     align-content: center;
   }
   .area_trabajo{
+    /* height: 60vh; */
+    /* background-color: rgb(20, 243, 9) ;
+    grid-area: area_trabajo;
+    display: grid;
+    grid-template-columns: 1fr 1fr; */
+    /* grid-template-rows: 1fr 1fr; */
+    /* grid-template-areas:
+    "resumen resumen2"
+    "panel1 panel2"; */
+  }
+  .area_trabajo_logo{
+    /* height: 60vh; */
     background-color: rgb(20, 243, 9) ;
     grid-area: area_trabajo;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    /* grid-template-rows: 1fr 1fr; */
+    /* grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr; */
     grid-template-areas:
-    "resumen resumen2"
-    "panel1 panel2";
+    "vacio vacio vacio"
+    "vacio logo vacio"
+    "vacio vacio vacio";
+  }
+  .logo{
+    display: block;
+    grid-area: logo;
+  }
+  .vacio{
+    grid-area: vacio;
+    min-height: 20%;
   }
   .panel1{
+    display: none;
     grid-area:panel1;
     /* margin:30px; */
     background-color: rgb(20, 143, 9) ;
@@ -1165,12 +1201,14 @@ and (-webkit-min-device-pixel-ratio: 1)  {
     align-content: center;
   }
   .panel2{
+    display: none;
     grid-area:panel2;
     /* margin:30px; */
     background-color: rgb(101, 43, 9) ;
     align-content: center;
   }
   .resumen{
+    display: none;
     grid-area:resumen;
     /* margin:30px; */
     background-color: rgb(201, 143, 9) ;
@@ -1178,6 +1216,7 @@ and (-webkit-min-device-pixel-ratio: 1)  {
     max-height: 200px;
   }
   .resumen2{
+    display: none;
     grid-area:resumen2;
     /* margin:30px; */
     background-color: rgb(201, 143, 9) ;
@@ -1193,7 +1232,7 @@ and (-webkit-min-device-pixel-ratio: 1)  {
     /* grid-template-columns: 1fr 1fr 7fr 2fr 1fr; */
     /* max-height: 13vh; */
     /* border: 1.5px solid gray; */
-    padding: 5px;
+    /* padding: 5px; */
     border-radius: 10px;
     color: gray;
     /* font-size:20px; */
@@ -1202,6 +1241,9 @@ and (-webkit-min-device-pixel-ratio: 1)  {
     align-items: center;
   }
 
+  .ec_wrapper{
+    min-height: 100vh;
+  }
 }
 
 @media only screen
