--- a/src/public/css/tambox.css
+++ b/src/public/css/tambox.css
@@ -2,6 +2,9 @@
   font-family: "CustomFont";
   src: url("/fonts/font1.ttf");
 }
+@media only screen
+and (min-device-width : 803px)
+and (-webkit-min-device-pixel-ratio: 1)  {
 * {
   box-sizing: border-box;
 }
@@ -36,31 +39,45 @@ td{
 li{
   padding:5px;
 }
-
 .ec_wrapper{
   display: grid;
-  grid-row-gap: 5px;
-  grid-template-rows: minmax(60px,60px) 1fr minmax(60px,60px);
-  min-height: 98vh;
-  /* max-height: 98vh; */
+  /* grid-row-gap: 5px; */
+  grid-template-rows: minmax(60px,60px) 1fr minmax(30px,30px);
+  min-height: 95vh;
+  max-height: 98vh;
   color:gray;
   grid-template-areas:
     "cabecera"
     "area_trabajo"
     "pie_de_pagina";
 }
-
 .cabecera{
   background-color: rgb(201, 43, 9) ;
   grid-area: cabecera;
   align-content: center;
 }
+.ec_panel{
+  display: grid;
+  color:white;
+  background-image: linear-gradient(to bottom, rgb(23, 22, 22),rgba(53,53,53));
+  grid-gap:5px;
+  filter: drop-shadow(1px 1px 15px #000000);
+  border-radius: 12px;
+  border: 1.5px solid rgb(80,80,80);
+  padding: 5px;
+  margin-bottom: 5px;
+}
+.area_trabajo_logo{
+  display: none;
+}
+
 .area_trabajo{
   background-color: rgb(20, 243, 9) ;
   grid-area: area_trabajo;
   display: grid;
-  /* grid-template-columns: 1fr 1fr; */
-  /* grid-template-rows: 1fr 1fr; */
+  max-height: 85vh;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
   grid-template-areas:
   "resumen resumen2"
   "panel1 panel2";
@@ -68,16 +85,7 @@ li{
 .logo{
   display: none;
 }
-.area_trabajo_logo{
-  background-color: rgb(20, 243, 9) ;
-  grid-area: area_trabajo;
-  display: grid;
-  /* grid-template-columns: 1fr 1fr; */
-  /* grid-template-rows: 1fr 1fr; */
-  grid-template-areas:
-  "resumen resumen2"
-  "panel1 panel2";
-}
+
 .panel1{
   grid-area:panel1;
   /* margin:30px; */
@@ -108,13 +116,20 @@ li{
 .pie_de_pagina{
   /* background-color: rgb(20, 43, 199) ; */
   grid-area: pie_de_pagina;
+  font-size: 12px;
+  background-color: rgba(8, 8, 8, 1);
   display: grid;
-  /* justify-content: center; */
-  /* margin: auto; */
-  font-size:10px;
-  color:gray;
+  /* grid-template-columns: 1fr 1fr 7fr 2fr 1fr; */
+  /* max-height: 13vh; */
+  /* border: 1.5px solid gray; */
+  /* padding: 5px; */
+  border-radius: 10px;
+  color: gray;
+  /* font-size:20px; */
+  font-family: Arial, Helvetica, sans-serif;
+  text-align:center;
+  align-items: center;
 }
-
 .display{
   padding:0;
 }
@@ -144,7 +159,6 @@ li{
   grid-gap: 5px;
   margin : 0;
 }
-
 .titulo{
   background-color: rgba(8, 8, 8, 1);
   display: grid;
@@ -175,7 +189,6 @@ li{
   text-align:center;
   align-items: center;
 }
-
 .grupo2{
   grid-column: 1/5;
   min-height:350px;
@@ -227,7 +240,6 @@ li{
   justify-items:center;
   align-items: center;
 }
-
 .cuadre_diario{
   grid-column: 1/5;
   min-height:350px;
@@ -281,7 +293,6 @@ li{
   grid-gap:1em;
 
 }
-
 .mensaje_monto{
   font-size:48px;
   font-weight: bold;
@@ -303,7 +314,6 @@ li{
   grid-row:2/4;
   padding: 20px;
 }
-
 .mensaje_titulo{
   font-size:28px;
   font-weight: bold;
@@ -355,7 +365,6 @@ li{
   grid-gap:1em;
   background-image: url("../img/bg_image4.jpg");
 }
-
 .grupo_full_width{
   grid-column: 1;
   min-width:100vh;
@@ -383,13 +392,11 @@ li{
   color: yellow;
   font-weight: bold;
 }
-
 #given_ip{
   font-size: 22px;
   color: yellow;
   font-weight: bold;
 }
-
 #given_port{
     font-size: 22px;
   color: yellow;
@@ -463,7 +470,6 @@ li{
   width:150px;
   font-size: 18px;
 }
-
 #titulo_popup{
   font-size:30px;
   color:white;
@@ -504,7 +510,6 @@ li{
   display: none;
   margin: 0 auto;
 }
-
 .interface_button{
   margin:5px;
 }
@@ -667,7 +672,6 @@ li{
   z-index: 5;
   display: none;
 }
-
 .parent {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
@@ -685,12 +689,10 @@ li{
   /* padding: 5px; */
   text-align: center;
 }
-
 .div1 { grid-area: 1 / 2 / 4 / 5; }
 .div2 { grid-area: 2 / 2 / 6 / 5; }
 .div3 { grid-area: 4 / 2 / 7 / 3; }
 .div4 { grid-area: 4 / 4 / 7 / 5; }
-
 .smart {
   display: grid;
   grid-template-rows: 0.5fr repeat(8, 1fr);
@@ -708,36 +710,11 @@ li{
   /* padding: 5px; */
   text-align: center;
   }
-
 .smart_div1 { grid-area: 2 / 4 / 4 / 7; }
 .smart_div2 { grid-area: 4 / 4 / 5 / 7; }
 .smart_div3 { grid-area: 5 / 4 / 6 / 7; }
 .smart_div4 { grid-area: 7 / 4 / 8 / 7; }
 .smart_div5 { grid-area: 8 / 4 / 9 / 5; }
-
-
-.ec_panel{
-  display: grid;
-  /* background-color: rgb(43, 43, 43); */
-  color:white;
-  /* background-image: linear-gradient(to bottom, rgba(255,0,0,0), rgb(218, 196, 31)); */
-  /* background-image: linear-gradient(to bottom, rgba(80,80,80), rgb(43, 43, 43)); */
-  /* background-image: linear-gradient(to bottom, rgba(53,53,53), rgb(23, 22, 22)); */
-  background-image: linear-gradient(to bottom, rgb(23, 22, 22),rgba(53,53,53));
-
-  grid-gap:5px;
-  filter: drop-shadow(1px 1px 15px #000000);
-  /* opacity: 0.5; */
-  /* grid-column-start: span 1; */
-  border-radius: 12px;
-  /* border: 1.5px solid rgb(174, 233, 28); */
-  border: 1.5px solid rgb(80,80,80);
-
-  padding: 5px;
-  margin-bottom: 5px;
-
-  /* overflow-y:scroll; */
-}
 
 .ec_panel_tarjeta_historial{
   display: grid;
@@ -768,8 +745,6 @@ li{
   max-height: 400px;
   overflow-y: scroll;
 }
-
-
 .ec_panel_tarjeta_historial_remesa_hermes_verde{
   display: grid;
   /* background-color: rgb(43, 43, 43); */
@@ -830,7 +805,6 @@ li{
   max-height: 400px;
   overflow-y: scroll;
 }
-
 .ec_panel_tarjeta_historial_verde{
   display: grid;
   /* background-color: rgb(43, 43, 43); */
@@ -861,7 +835,6 @@ li{
   max-height: 400px;
   overflow-y: scroll;
 }
-
 .ec_panel_tarjeta_historial_roja{
   display: grid;
   /* background-color: rgb(43, 43, 43); */
@@ -922,7 +895,6 @@ li{
   max-height: 400px;
   overflow-y: scroll;
 }
-
 .no_remesa{
   grid-area: no_remesa;
 }
@@ -935,7 +907,6 @@ li{
 .label_no_billetes{
   grid-area: label_no_billetes;
 }
-
 .label_tipo{
   grid-area: label_tipo;
 }
@@ -954,7 +925,6 @@ li{
 .hora_creacion{
   grid-area:hora_creacion;
 }
-
 .label_status{
   grid-area: label_status;
 }
@@ -985,7 +955,6 @@ li{
 .label_hora_cierre{
   grid-area:label_hora_cierre;
 }
-
 .ec_card{
     display:grid;
     /* grid-template-columns: 50% 50%; */
@@ -995,8 +964,9 @@ li{
     border-radius: 12px;
     border: 1.5px solid rgb(50, 50, 50);
     padding: 10px;
-    /* margin:auto; */
+    margin:15px;
     filter: drop-shadow(1px 1px 15px #000000);
+    text-align: center;
 
 }
 .ec_card2{
@@ -1008,9 +978,10 @@ li{
     border-radius: 12px;
     border: 1.5px solid rgb(50, 50, 50);
     padding: 10px;
-    /* margin:auto; */
+    margin:15px;
     filter: drop-shadow(1px 1px 15px #000000);
     overflow-y: scroll;
+    text-align: center;
 }
 .ec_btn{
     display:grid;
@@ -1049,12 +1020,9 @@ li{
     min-width: 100px;
     margin:auto;
 }
-
 .letra_gris{
   color:gray !important;
 }
-
-
 .info_template {
     /* margin:20px; */
     display: grid;
@@ -1080,18 +1048,15 @@ li{
     /* justify-items:center;
     align-items: center; */
 }
-
 .info_maquina_template {
   /* grid-area: 1 / 4 / span 1 / 9; */
   grid-row-gap: 15px;
 
 }
-
 .info_conexion_template {
   /* grid-area: 1 / 1 / span 1 / 4; */
   grid-row-gap: 15px;
  }
-
 .locking_template {
   /* grid-area: 1 / 9 / span 1 / 12; */
   display: grid;
@@ -1100,8 +1065,6 @@ li{
   grid-column-gap: 0px;
   grid-row-gap: 0px;
 }
-
-/* .div1 { grid-area: 4 / 2 / 9 / 6; } */
 .boton_bloqueo {
    grid-area: 3 / 3 / 4 / 4;
    margin:auto;
@@ -1134,155 +1097,21 @@ li{
    /* padding: 5px; */
    text-align: center;
  }
-
-@media only screen
-/* para pantalla de raspberry pi */
-and (min-device-width : 799px)
-and (max-device-width : 800px)
-and (-webkit-min-device-pixel-ratio: 1)  {
-  .ec_btn{
-    padding: 0.2rem 0.8rem;
-  }
-  body {
-    /* background-color: black; */
-    margin:0;
-  }
-  .grupo4{
-    min-height:80vh;
-    grid-template-columns: repeat(4,1fr);
-    grid-template-rows:repeat(2,1fr);
-  }
-  .btn{
-    padding: 0.4rem 1.3rem;
-
-  }
-  .cabecera{
-    /* background-color: rgb(201, 43, 9) ; */
-    grid-area: cabecera;
-    align-content: center;
-  }
-  .area_trabajo{
-    /* height: 60vh; */
-    /* background-color: rgb(20, 243, 9) ;
-    grid-area: area_trabajo;
-    display: grid;
-    grid-template-columns: 1fr 1fr; */
-    /* grid-template-rows: 1fr 1fr; */
-    /* grid-template-areas:
-    "resumen resumen2"
-    "panel1 panel2"; */
-  }
-  .area_trabajo_logo{
-    /* height: 60vh; */
-    background-color: rgb(20, 243, 9) ;
-    grid-area: area_trabajo;
-    display: grid;
-    /* grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr; */
-    grid-template-areas:
-    "vacio vacio vacio"
-    "vacio logo vacio"
-    "vacio vacio vacio";
-  }
-  .logo{
-    display: block;
-    grid-area: logo;
-  }
-  .vacio{
-    grid-area: vacio;
-    min-height: 20%;
-  }
-  .panel1{
-    display: none;
-    grid-area:panel1;
-    /* margin:30px; */
-    background-color: rgb(20, 143, 9) ;
-    justify-content: center;
-    align-content: center;
-  }
-  .panel2{
-    display: none;
-    grid-area:panel2;
-    /* margin:30px; */
-    background-color: rgb(101, 43, 9) ;
-    align-content: center;
-  }
-  .resumen{
-    display: none;
-    grid-area:resumen;
-    /* margin:30px; */
-    background-color: rgb(201, 143, 9) ;
-    overflow-y: hidden;
-    max-height: 200px;
-  }
-  .resumen2{
-    display: none;
-    grid-area:resumen2;
-    /* margin:30px; */
-    background-color: rgb(201, 143, 9) ;
-    overflow-y: hidden;
-    max-height: 200px;
-  }
-  .pie_de_pagina{
-    /* background-color: rgb(20, 43, 199) ; */
-    grid-area: pie_de_pagina;
-    font-size: 12px;
-    background-color: rgba(8, 8, 8, 1);
-    display: grid;
-    /* grid-template-columns: 1fr 1fr 7fr 2fr 1fr; */
-    /* max-height: 13vh; */
-    /* border: 1.5px solid gray; */
-    /* padding: 5px; */
-    border-radius: 10px;
-    color: gray;
-    /* font-size:20px; */
-    font-family: Arial, Helvetica, sans-serif;
-    text-align:center;
-    align-items: center;
-  }
-
-  .ec_wrapper{
-    min-height: 100vh;
-  }
-}
-
-@media only screen
-/* para pantalla deihpone */
-and (min-device-width : 375px)
-and (max-device-width : 667px)
-and (orientation : landscape){
-  .grupo4{
-    min-height:40vh;
-    grid-template-columns: repeat(2,1fr);
-    grid-template-rows:repeat(2,1fr);
-  }
-}
-
-@media only screen
-/* para pantalla deihpone */
-and (min-device-width : 375px)
-and (max-device-width : 667px)
-and (orientation : portrait){
-  .grupo4{
-    min-height:80vh;
-    grid-template-columns: repeat(2,1fr);
-    grid-template-rows:repeat(2,1fr);
-    background-color: white;
-  }
-  .mensaje_titulo{
-    font-size:14px;
-    font-weight: bold;
-    /* grid-column: 2/4; */
-    padding: 10px;
-  }
-  .info_template{
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-template-columns: 1fr;
-    background-color: white;
-    overflow-y:auto;
-  }
-  .resumen{
-    grid-column-start:span 2;
-    min-width: 90vw;
-  }
-}
+ .panel_oos{
+   display: grid;
+   grid-template-columns: 0.5fr auto 0.5fr;
+   grid-template-rows: 0.5fr 1fr 1fr 0.5fr;
+ }
+ #titulo_popup{
+   font-weight: bold;
+   color:red;
+   font-size: 34px;
+   grid-row: 2 / span 1;
+   grid-column: 2 / span 1;
+ }
+ #texto_popoup{
+   font-size: 24px;
+   grid-row: 3 / span 1;
+   grid-column: 2 / span 1;
+ }
+ }
